--- a/src/app/timer/page.module.css
+++ b/src/app/timer/page.module.css
@@ -1,10 +1,12 @@
 .wrapper { 
-    height: 100vh; 
+    height: 220vh;
     background: #000; 
     display: flex; 
     flex-direction: column; 
     align-items: center; 
     justify-content: center; 
+    padding: 5rem;
+    gap: 20vh;
 }
 .clock { 
     font-size: 25vw; 
@@ -18,7 +20,7 @@
     animation: pulse 1s infinite; 
 }
 .btnGroup { 
-    margin-top: 50px; 
+    margin: 50px 0; 
     display: flex; 
     gap: 20px; 
 }
